# Parallel_Progamming_in_OCaml

./: .gitignore  PL_Final_PPT.pptx  README.md  algos.opam  dune-project
lib/: algos.ml  dune
lib/btree/height/: main.ml
lib/determinant/: main.ml
lib/fft/: main.ml
lib/fibonacci/: main.ml
lib/lu_decomposition/: main.ml  main.mli
lib/mat_mul/: main.ml  main.mli
lib/mergesort/functional/: main.ml
lib/mergesort/imperative/: main.ml
lib/nbody/parallel/: main.ml
lib/nbody/sequential/: main.ml
lib/nbody/write_optimized/: main.ml
lib/qr_decomp/gram/: main.ml
lib/quicksort/functional/: main.ml  main.mli
lib/quicksort/imperative/: main.ml
lib/svd/: main.ml
test/: dune
